--- a/testGapsi/Base.lproj/Main.storyboard
+++ b/testGapsi/Base.lproj/Main.storyboard
@@ -1,24 +1,118 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="testGapsi" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="WIN-Pj-DdI">
+                                <rect key="frame" x="0.0" y="44" width="375" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="EDc-XX-YJh"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="QWz-oX-mPz"/>
+                                </connections>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="76e-s1-oTy">
+                                <rect key="frame" x="0.0" y="100" width="375" height="678"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemTableViewCell" rowHeight="150" id="8Rt-oU-xgR" customClass="ItemTableViewCell" customModule="testGapsi" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="150"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8Rt-oU-xgR" id="IMr-qu-eeN">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LEp-c9-T6X">
+                                                    <rect key="frame" x="16" y="25" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="V1Z-KI-76e"/>
+                                                        <constraint firstAttribute="height" constant="100" id="bDu-1I-IFw"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1z-ba-htw">
+                                                    <rect key="frame" x="124" y="103" width="235" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="V5n-hf-ABI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lll" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibU-Lt-T7p">
+                                                    <rect key="frame" x="124" y="25" width="235" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="70" id="vt4-sQ-Qpy"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="q1z-ba-htw" firstAttribute="top" secondItem="ibU-Lt-T7p" secondAttribute="bottom" constant="8" symbolic="YES" id="Eq1-hh-w4v"/>
+                                                <constraint firstItem="q1z-ba-htw" firstAttribute="leading" secondItem="LEp-c9-T6X" secondAttribute="trailing" constant="8" symbolic="YES" id="Jk5-fC-wf6"/>
+                                                <constraint firstItem="LEp-c9-T6X" firstAttribute="leading" secondItem="IMr-qu-eeN" secondAttribute="leading" constant="16" id="N17-Lf-D6f"/>
+                                                <constraint firstAttribute="trailing" secondItem="ibU-Lt-T7p" secondAttribute="trailing" constant="16" id="WXA-CL-ZVE"/>
+                                                <constraint firstItem="ibU-Lt-T7p" firstAttribute="top" secondItem="IMr-qu-eeN" secondAttribute="top" constant="25" id="aeJ-m6-DNX"/>
+                                                <constraint firstItem="LEp-c9-T6X" firstAttribute="centerY" secondItem="IMr-qu-eeN" secondAttribute="centerY" id="kGM-Yf-yyZ"/>
+                                                <constraint firstAttribute="trailing" secondItem="q1z-ba-htw" secondAttribute="trailing" constant="16" id="xha-r2-K7F"/>
+                                                <constraint firstItem="ibU-Lt-T7p" firstAttribute="leading" secondItem="LEp-c9-T6X" secondAttribute="trailing" constant="8" symbolic="YES" id="zdG-Pm-m6l"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="img" destination="LEp-c9-T6X" id="KlF-GK-p2A"/>
+                                            <outlet property="price" destination="q1z-ba-htw" id="9kC-lL-IM4"/>
+                                            <outlet property="title" destination="ibU-Lt-T7p" id="vsl-Uc-gp0"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="CqL-kV-pcC"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Yz5-us-CpN"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="76e-s1-oTy" secondAttribute="trailing" id="ARV-BS-wIa"/>
+                            <constraint firstItem="76e-s1-oTy" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="PVi-Bu-r0I"/>
+                            <constraint firstItem="WIN-Pj-DdI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Uqh-ez-4io"/>
+                            <constraint firstItem="76e-s1-oTy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="csN-EJ-16I"/>
+                            <constraint firstItem="WIN-Pj-DdI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="gsh-xu-zp9"/>
+                            <constraint firstItem="76e-s1-oTy" firstAttribute="top" secondItem="WIN-Pj-DdI" secondAttribute="bottom" id="pZq-kR-HJD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WIN-Pj-DdI" secondAttribute="trailing" id="q3Q-wa-dvx"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="searchBar" destination="WIN-Pj-DdI" id="fSP-JI-zJc"/>
+                        <outlet property="tableView" destination="76e-s1-oTy" id="wHa-Yo-tGp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="28" y="83.497536945812811"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
